--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
       body {
         font-family: "Open Sans", sans-serif;
-        background-color: #c9d4c9;
+        background-color: #FCAE99;
         background-image: linear-gradient(
           45deg,
           rgba(255, 255, 255, 0.15) 25%,
