--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           class="object-3d"
           id="obj1"
           style="
-            background-image: url('tutari.png');
+            background-image: url('tutari2.png');
             left: 0;
             transform: translateX(0) rotateY(0deg);
           "
@@ -171,7 +171,7 @@
           style="
             left: 50%;
             transform: translateX(-50%) rotateY(0deg);
-            background-image: url('Shubvivah.png');
+            background-image: url('Shubvivah2.png');
           "
           aria-label="Decorative red flower 3D object"
           tabindex="0"
@@ -185,7 +185,10 @@
             right: 0;
             left: auto;
             transform: scaleX(-1) rotateY(0deg);
-            background-image: url('tutari.png');
+            background-image: url('tutari2.png');
+            background-blend-mode: multiply;
+    mix-blend-mode: multiply;
+    /* background-color: white; */
           "
           aria-label="Decorative green leaf 3D object"
           tabindex="0"
