--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <style>
+      #toggleBtn {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 9999;
+        padding: 1px px1;
+        color: #ffffffee;
+        border: none;
+        
+        font-size:10px;
+        cursor: pointer;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      }
+  
+      #toggleBtn:hover {
+        background: #333;
+      }
+    </style>
+    <style>
       body {
         font-family: "Open Sans", sans-serif;
         background-color: #FCAE99;
